--- a/electron-react-boilerplate/package.json
+++ b/electron-react-boilerplate/package.json
@@ -107,7 +107,8 @@
     "electron-updater": "^6.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@electron/rebuild": "^3.3.0",
@@ -124,6 +125,7 @@
     "@types/webpack-bundle-analyzer": "^4.6.0",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
+    "@types/styled-components": "^5.1.34",
     "browserslist-config-erb": "^0.0.3",
     "chalk": "^4.1.2",
     "concurrently": "^8.2.1",
